--- a/package.json
+++ b/package.json
@@ -8,9 +8,15 @@
     "version": "vinxi version"
   },
   "dependencies": {
+    "@monaco-editor/loader": "^1.5.0",
+    "@monaco-editor/react": "^4.7.0",
+    "@nobie-org/xyflow": "github:nobie-org/xyflow#matt/feat/solid-js-port-updated",
     "@solidjs/meta": "^0.29.4",
     "@solidjs/router": "^0.15.0",
     "@solidjs/start": "^1.1.0",
+    "@typescript-eslint/parser": "^8.33.1",
+    "@typescript-eslint/typescript-estree": "^8.33.1",
+    "reactflow": "^11.11.4",
     "solid-js": "^1.9.5",
     "vinxi": "^0.5.3"
   },
