--- a/package.json
+++ b/package.json
@@ -20,8 +20,12 @@
 		"@typescript-eslint/typescript-estree": "^8.33.1",
 		"@vrite/tiptap-solid": "1.0.4",
 		"@xyflow/system": "^0.0.62",
+		"class-variance-authority": "^0.7.1",
 		"classcat": "^5.0.4",
+		"clsx": "^2.1.1",
 		"solid-js": "^1.9.5",
+		"tailwind-merge": "^3.3.1",
+		"tailwindcss-animate": "^1.0.7",
 		"vinxi": "^0.5.3"
 	},
 	"devDependencies": {
