--- a/package.json
+++ b/package.json
@@ -33,8 +33,11 @@
 		"@rollup/plugin-babel": "^6.0.4",
 		"@rollup/plugin-node-resolve": "^15.2.3",
 		"@rollup/plugin-typescript": "^11.1.6",
+		"autoprefixer": "^10.4.21",
+		"postcss": "^8.5.6",
 		"rollup": "^4.9.6",
-		"rollup-plugin-postcss": "^4.0.2"
+		"rollup-plugin-postcss": "^4.0.2",
+		"tailwindcss": "3.4.1"
 	},
 	"engines": {
 		"node": ">=22"
